--- a/assets/stylesheets/base/_05-defaults.scss
+++ b/assets/stylesheets/base/_05-defaults.scss
@@ -16,9 +16,9 @@ header, main, ol, section, nav, ul {
 
 html {
   background: $color-bg;
-  height: 100%;
+  height: 100vh;
   position: fixed;
-  width: 100%;
+  width: 100vw;
 }
 
   body {
@@ -26,7 +26,7 @@ html {
     font-family: $font-family-primary;
     font-size: $font-size;
     font-weight: $font-weight;
-    height: 100%;
+    height: 100vh;
     line-height: $line-height;
     margin: 0;
     overflow: hidden;
@@ -34,7 +34,7 @@ html {
     position: fixed;
     text-rendering: optimizeLegibility;
     text-size-adjust: 100%;
-    width: 100%;
+    width: 100vw;
   }
 
 //  Base element styles
