HOME PAGE WORKS

--- a/src/layouts/application.njk
+++ b/src/layouts/application.njk
@@ -2,13 +2,23 @@
 coverFormat: png
 globalStyles: true
 sectionStyles: false
+script: false
 styles: true
 useFooter: true
 useHeader: true
 ---
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
   <head>
+    <!--
+        _  ___   ___                    _       _
+      / |/ _ \ / _ \    __ _  ___   __| |   __| | __ _ _ __ ___  _ __    _   _  ___ _ __
+      | | | | | | | |  / _` |/ _ \ / _` |  / _` |/ _` | '_ ` _ \| '_ \  | | | |/ _ \ '_ \
+      | | |_| | |_| | | (_| | (_) | (_| | | (_| | (_| | | | | | | | | | | |_| |  __/ | | |
+      |_|\___/ \___/   \__, |\___/ \__,_|  \__,_|\__,_|_| |_| |_|_| |_|  \__, |\___|_| |_|
+                        |___/                                             |___/
+    -->
+
     {% include 'siteHead.njk' %}
   </head>
 
