--- a/src/includes/siteHead.njk
+++ b/src/includes/siteHead.njk
@@ -7,9 +7,9 @@
 {% set pageDescription = description or site.description %}
 {% set pageTitle = [title or site.description, site.title].join(' — ') %}
 
-<link rel="apple-touch-icon" href="{{ site.favicon }}" />
+<link rel="apple-touch-icon" href="/_assets/images/icons/apple-touch-icon.png" />
 <link rel="dns-prefetch" href="//use.typekit.net">
-<link rel="icon" type="image/png" href="{{ site.favicon }}" sizes="196x196" />
+<link rel="icon" type="image/png" href="/_assets/images/icons/favicon.ico" sizes="196x196" />
 <meta http-equiv="content-script-type" content="text/javascript">
 <meta http-equiv="content-style-type" content="text/css">
 <meta name="apple-mobile-web-app-title" content="100yen">
