--- a/app/assets/stylesheets/master.css
+++ b/app/assets/stylesheets/master.css
@@ -17,7 +17,7 @@ html {
   margin: 0;
   min-height: calc(100vh - 10rem);
   min-height: -webkit-fill-available;
-  padding: 2rem;
+  padding: 1rem;
 }
 
 body {
@@ -32,6 +32,12 @@ body {
 @media screen and (min-width: 500px) {
   html {
     font-size: 10px;
+    padding: 3rem;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  html {
     padding: 5rem;
   }
 }
