--- a/app/assets/stylesheets/master.css
+++ b/app/assets/stylesheets/master.css
@@ -31,6 +31,7 @@ body {
 
 @media screen and (min-width: 500px) {
   html {
+    border: 10px solid red;
     font-size: 10px;
     padding: 3rem;
   }
