--- a/app/pages/home/styles.css
+++ b/app/pages/home/styles.css
@@ -85,11 +85,13 @@ span:lang(ja) {
 
 .c-two-js {
   background: #111;
+  bottom: 0;
   display: block;
-  height: 100%;
+  height: calc(100vh + 100px);
   left: 0;
   position: fixed;
+  right: 0;
   top: 0;
-  width: 100%;
+  width: 100vw;
   z-index: -1;
 }
