--- a/app/assets/stylesheets/master.css
+++ b/app/assets/stylesheets/master.css
@@ -16,7 +16,7 @@ html {
   margin: 0;
   min-height: 100vh;
   min-height: -webkit-fill-available;
-  padding: 1rem;
+  padding: 0;
 }
 
 body {
@@ -27,6 +27,7 @@ body {
   margin: 0;
   min-height: 100vh;
   min-height: -webkit-fill-available;
+  padding: 0;
 }
 
 @media screen and (min-width: 500px) {
