--- a/app/pages/tetris/styles.css
+++ b/app/pages/tetris/styles.css
@@ -1,4 +1,19 @@
 html {
   background-color: #112;
+}
+
+.c-main {
   padding: 0;
+}
+
+@media screen and (min-width: 500px) {
+  .c-main {
+    padding: 0;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .c-main {
+    padding: 0;
+  }
 }
