--- a/app/assets/stylesheets/master.css
+++ b/app/assets/stylesheets/master.css
@@ -10,20 +10,9 @@
 }
 
 html {
-  background-color: var(--palette-cream);
-  color: var(--palette-navy);
+  background: rgb(29, 43, 83);
+  color: rgb(255, 241, 232);
   font-size: 8px;
-  margin: 0;
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
-  padding: 0;
-}
-
-body {
-  font-family: Inter, sans-serif;
-  font-size: var(--base-font-size);
-  font-weight: 400;
-  line-height: 1.65;
   margin: 0;
   min-height: 100vh;
   min-height: -webkit-fill-available;
@@ -40,6 +29,17 @@ body {
   html {
     padding: 0;
   }
+}
+
+body {
+  font-family: Inter, sans-serif;
+  font-size: var(--base-font-size);
+  font-weight: 400;
+  line-height: 1.65;
+  margin: 0;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  padding: 0;
 }
 
 a {
@@ -79,6 +79,10 @@ h5 { font-size: 1.25rem; }
 p {
   margin-bottom: 1.15rem;
   max-width: 60ch;
+}
+
+:lang(ja) {
+  white-space: nowrap;
 }
 
 .c-link {
