--- a/app/pages/code/tetris/styles.css
+++ b/app/pages/code/tetris/styles.css
@@ -1,19 +1,2 @@
-html {
-  background-image: radial-gradient(#222, #111);
-  overflow: hidden;
-}
-
-body {
-  overflow: hidden;
-  overscroll-behavior-y: none;
-}
-
-.c-main {
-  padding: 0;
-}
-
-.c-home-link {
-  left: 2rem;
-  position: absolute;
-  top: 1rem;
-}
+html{background-image:radial-gradient(#222,#111)}body,html{overflow:hidden}body{overscroll-behavior-y:none}.c-main{padding:0}.c-home-link{left:2rem;position:absolute;top:1rem}
+/*# sourceMappingURL=styles.css.map */
