Code index page

--- a/app/assets/stylesheets/layouts/_page.scss
+++ b/app/assets/stylesheets/layouts/_page.scss
@@ -2,14 +2,9 @@
   position: relative;
 
   .l-page__header {
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 5rem;
+    display: none;
   }
 
   .l-page__body {
-    margin-left: 5rem;
   }
 }
