--- a/app/pages/code/black/lives/matter/styles.scss
+++ b/app/pages/code/black/lives/matter/styles.scss
@@ -57,7 +57,7 @@ body {
 
 .fit-text {
   font-family: Poppins, sans-serif;
-  font-size: max(20vw, 5rem);
+  font-size: min(20vw, 20rem);
   font-weight: 400;
   line-height: 0.9;
 }
