--- a/app/pages/code/black/lives/matter/styles.scss
+++ b/app/pages/code/black/lives/matter/styles.scss
@@ -19,9 +19,11 @@ body {
 }
 
 .scene {
-  height: 100%;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+  min-width: 100vw;
+  min-width: -webkit-fill-available;
   perspective: 600px;
-  width: 100%;
 }
 
 .group {
@@ -38,7 +40,6 @@ body {
   position: absolute;
   text-transform: uppercase;
   top: 50vh;
-  transition: transform, 150ms ease-in-out;
 }
 
 .plane--r {
