Transform origin fix

--- a/app/pages/code/black/lives/matter/styles.scss
+++ b/app/pages/code/black/lives/matter/styles.scss
@@ -39,6 +39,7 @@ body {
   mix-blend-mode: screen;
   position: absolute;
   text-transform: uppercase;
+  transform-origin: 0 0;
   top: 50vh;
 }
 
